# CountingPolyhedronIntegerPoints

./: .gitignore  CMakeLists.txt  README.md  ToddPolynomial.cpp  charts.sh  experiments.sh  test_snf.cpp
PyTodd/: Todd.py
charts/: BernoulliTime.py  ErrorChart.py  PyErrorChart.py  PyTimeChart.py  TimeChart.py  TimeChartTodd.py
data/: bernoulli_time.txt  error.txt  error_fft.txt  time.txt  time_fft.txt  time_fft_fixed_input.txt  time_fixed_degree.txt  time_fixed_input.txt
experiments/: bernoulli_time.cpp  error.cpp  time.cpp
include/: Counter.h  DF_module.h  Dynamic.h  ExpPoly.h  GroupElement.h  SNF.h  SmithNormalForm.h  ToddFFT.h  ToddPoly.h  ToddPoly_FFT.h  ToddPolynomial.h  Tools.h  auxiliary_dynamic.h  boost_tee_logging.h  c_vector.h  counter.h  global_defs.h  group_element.h  hyperplane_avoid_solver.h  snf_class.h  timer.h
include/SNF/: DF_module.h  gmp_supp.h  utility.h
src/: ToddPolynomial.cpp  auxiliary_dynamic.cpp  c_vector.cpp  constant_in_tailor.cpp  counter.cpp  dynamic.cpp  exp_poly.cpp  group_element.cpp  hyperplane_avoid_solver.cpp  main.cpp  smith_normal_form.cpp  snf_class.cpp  todd_poly.cpp  todd_poly_fft.cpp  tools.cpp
tests/: ExpPoly.cpp  ToddPoly.cpp  ToddPoly_FFT.cpp  dynamic.cpp  group.cpp  stress.cpp  stress_snf.cpp  test_all.cpp  test_group.cpp  tests.cpp  testsFFT.cpp  testsTodd.cpp  testsTodd_FFT.cpp  tests_defs.hpp
